No longer allow emulated buttons to wrap their text implicitly

--- a/data/themes/EdgeBSD.css
+++ b/data/themes/EdgeBSD.css
@@ -220,6 +220,10 @@ input[type=text]:focus, input[type=password]:focus {
 	box-shadow: 1px 2px 2px #fff inset;
 }
 
+a.button {
+	white-space: nowrap;
+}
+
 a.button, button, input[type=button], input[type=reset], input[type=submit] {
 	border-radius: 0.3em;
 	box-shadow: -2px -2px 2px #ddd inset;
